# WG_radius

./: .gitattributes  .gitignore  CMakeLists.txt
cmd/: wg_native_smoke.cpp  wg_radiusd.cpp
docs/: implementation-plan.md  radcli.md  requirements.md
include/wg_radius/application/: async_auth_command_processor.hpp  auth_command_processor.hpp  auth_command_queue.hpp  command_executor.hpp  profile_runtime.hpp  wg_event_router.hpp  wg_polling_coordinator.hpp
include/wg_radius/coa/: request_source.hpp
include/wg_radius/config/: config.hpp  config_parser.hpp
include/wg_radius/domain/: peer_session.hpp  session_manager.hpp
include/wg_radius/radius/: radcli_radius_client.hpp  radius_client.hpp  radius_profile.hpp
include/wg_radius/shaping/: noop_traffic_shaper.hpp  tc_traffic_shaper.hpp  traffic_shaper.hpp
include/wg_radius/wireguard/: netlink_peer_controller.hpp  netlink_wireguard_client.hpp  peer_controller.hpp  wg_snapshot.hpp  wireguard_client.hpp
src/application/: async_auth_command_processor.cpp  auth_command_processor.cpp  command_executor.cpp  profile_runtime.cpp  wg_event_router.cpp  wg_polling_coordinator.cpp
src/coa/: request_source.cpp
src/config/: config_parser.cpp
src/domain/: peer_session.cpp  session_manager.cpp
src/radius/: radcli_radius_client.cpp
src/shaping/: noop_traffic_shaper.cpp  tc_traffic_shaper.cpp
src/wireguard/: netlink_peer_controller.cpp  netlink_wireguard_client.cpp  wg_snapshot.cpp
tests/: async_auth_command_processor_tests.cpp  auth_command_processor_tests.cpp  coa_request_source_tests.cpp  command_executor_tests.cpp  config_parser_tests.cpp  peer_session_tests.cpp  phase1_smoke_tests.cpp  profile_runtime_tests.cpp  session_manager_tests.cpp  tc_traffic_shaper_tests.cpp  test_harness.hpp  test_main.cpp  wg_event_router_tests.cpp  wg_polling_coordinator_tests.cpp  wg_snapshot_tests.cpp
tests/integration/: global_real_smoke.sh  phase1_real_radius_flow.sh  phase1_real_wg_smoke.sh  phase2_real_radius_accounting.sh  phase3_real_dynamic_control.sh  phase3_real_soak.sh
